@@ -1,0 +1,6 @@
+(* This file is overwritten when a package is created. It is supposed
+   to define a value of type [unit] whose name is [require_XXXXXXXX],
+   where [XXXXXXXX] is our 8-digit version number. *)
+
+let require_unreleased =
+  ()
