@@ -1,3 +1,10 @@
+(* This file is overwritten when a package is created. The version
+   string is defined as an 8-digit version number [XXXXXXXX]. *)
+
+(* During development, [version] is defined as ["unreleased"]. This
+   must match the name of the variable [version_unreleased] in the
+   module [StaticVersion]. *)
+
 let version =
-  "<unreleased>" (* to be overridden when a package is created *)
+  "unreleased"
 
