@@ -1,3 +1,9 @@
+2015/11/11:
+The code produced by version XXXXXXXX of menhir --table can now be linked only
+against a matching version of MenhirLib. If an incorrect version of MenhirLib
+is installed, the OCaml compiler should complain that
+[MenhirLib.StaticVersion.require_XXXXXXXX] is undefined.
+
 2015/11/10:
 Optimized the computation of $symbolstartpos, based on a couple of assumptions
 about the lexer. (See the manual.)
